--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/typography": "^0.5.16",
+        "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.1.2",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.5.1",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.0.0",
         "vite": "^6.0"
     }
 }
